--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -19,6 +19,7 @@
   <header>
     <h1 class="h3">Results</h1>
   </header>
+  <%= render partial: "pager", locals: { keywords: @keywords, page: @page } %>
   <ol class="list-group">
     <% @customers.each do |customer| %>
       <li class="list-group-item clearfix">
@@ -34,4 +35,5 @@
       </li>
     <% end %>
   </ol>
+  <%= render partial: "pager", locals: { keywords: @keywords, page: @page } %>
 </section>
