--- a/app/views/angular_test/index.html.erb
+++ b/app/views/angular_test/index.html.erb
@@ -1,3 +1,4 @@
+<% # angular_test/index %>
 <article ng-app="angular_test">
   <header>
     <h1 ng-if="name">Hello, {{name}}</h1>
@@ -13,6 +14,5 @@
                autofocus
                ng-model="name">
       </div>
-    </form>
   </section>
 </article>
